gcc/testsuite/gdc.test/compilable/test23256.d
/* REQUIRED_ARGS: -os=windows
 */

// https://issues.dlang.org/show_bug.cgi?id=23256

void test23256() { }
